--- a/ScientificComputing/02_CSV_and_pandas.ipynb
+++ b/ScientificComputing/02_CSV_and_pandas.ipynb
@@ -569,6 +569,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6023898, 4588819, 10612717)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's compare the east-bound, west-bound, and total sums.\n",
+    "# The sum function will add up all the values in the column.\n",
+    "# The total should equal the combined East and West values.\n",
+    "df[\"East\"].sum(), df[\"West\"].sum(), df[\"Total\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -595,7 +618,7 @@
     }
    ],
    "source": [
-    "# The index (first column) are \"datatime64\" objects\n",
+    "# The index (first column) are \"datetime64\" objects\n",
     "df.index"
    ]
   },
@@ -627,9 +650,9 @@
     }
    ],
    "source": [
-    "# The plot method will visualize the data\n",
-    "# Will graph the index against the 3 data columns\n",
-    "# Axes and legend created for us!\n",
+    "# The plot method will visualize the data as a\n",
+    "# graph of the index against the 3 data columns\n",
+    "# Axes and legend are created for us!\n",
     "df.plot(subplots=True, figsize=(15,4))"
    ]
   },
@@ -695,25 +718,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6023898, 4588819, 10612717)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Let's compare the east-bound, west-bound, and total sums\n",
-    "# The sum function will add up all the values in the column\n",
-    "df[\"East\"].sum(), df[\"West\"].sum(), df[\"Total\"].sum()"
+    "There's a lot more you can do with Pandas!  This book is an excellant introduction: https://www.amazon.com/Python-Data-Analysis-Wrangling-Jupyter/dp/109810403X"
    ]
   }
  ],
