update hsds notebook

--- a/ScientificComputing/04_HDF5_in_the_cloud.ipynb
+++ b/ScientificComputing/04_HDF5_in_the_cloud.ipynb
@@ -55,6 +55,9 @@
    "outputs": [],
    "source": [
     "# Drill down to the conus directory.  Use -H and -v options to show the file sizes\n",
+    "# Downloading one of these files would take over a month with a standard\n",
+    "# broadband internet connection!\n",
+    "\n",
     "! hsls -H -v --bucket s3://nrel-pds-hsds /nrel/nsrdb/conus/"
    ]
   },
@@ -148,7 +151,7 @@
    "outputs": [],
    "source": [
     "# compute the number of chunks in the dataset\n",
-    "(dset.shape[0] // dset.chunks[0]) * (dset.shape[1] // dset.chunks[0])  "
+    "(dset.shape[0] // dset.chunks[0]) * (dset.shape[1] // dset.chunks[1])  "
    ]
   },
   {
@@ -157,7 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read one year of measurments for a given station index\n",
+    "# read one year of measurments for a given station index.\n",
+    "# this will require reading ~`100MB from S3`\n",
     "%time tseries = dset[::,1234567]\n",
     "tseries"
    ]
