use anon for s3fs

--- a/ScientificComputing/04_HDF5_in_the_cloud.ipynb
+++ b/ScientificComputing/04_HDF5_in_the_cloud.ipynb
@@ -70,7 +70,7 @@
     "%%time\n",
     "# Open one of the nsrdb files.  Use the bucket param to get the data from NREL's S3 bucket\n",
     "if USE_H5PY:\n",
-    "    s3 = s3fs.S3FileSystem()\n",
+    "    s3 = s3fs.S3FileSystem(anon=True)\n",
     "    f = h5py.File(s3.open(\"s3://nrel-pds-nsrdb/conus/nsrdb_conus_pv_2022.h5\", \"rb\"), \"r\")\n",
     "else:\n",
     "    f = h5py.File(\"/nrel/nsrdb/conus/nsrdb_conus_2022.h5\", bucket=\"s3://nrel-pds-hsds\")"
